--- a/07_ソースコード/css/style.css
+++ b/07_ソースコード/css/style.css
@@ -7,9 +7,9 @@ a {
     text-decoration: none;
 }
 
-.head {
-    position: absolute;
-    width: 100%;
+div.head {
+    display: block;
+    width: 1515px;
     height: 147px;
     left: 0px;
     top: 0px;
@@ -18,10 +18,9 @@ a {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.category {
-    position: absolute;
+dl.category {
     width: 229px;
-    height: 100%;
+    height: 1134px;
     left: 13px;
     top: 162px;
     font-size: 24px;
@@ -31,6 +30,8 @@ a {
     font-weight: normal;
     line-height: 28px;
 
+    border-right-style: solid;
+    border-width: 1px;
 }
 
 .pagename {
@@ -68,8 +69,6 @@ a {
     font-weight: normal;
     font-size: 28px;
     line-height: 33px;
-    /* identical to box height */
-
 
     color: #5E5E5E;
 }
@@ -103,7 +102,6 @@ a {
     font-weight: normal;
     font-size: 24px;
     line-height: 28px;
-    font-feature-settings: 'pnum' on, 'lnum' on;
 
     color: #FFFFFF;
     border: 1px solid #F9F9F9;
@@ -184,7 +182,6 @@ a {
     font-weight: normal;
     font-size: 20px;
     line-height: 28px;
-    font-feature-settings: 'pnum' on, 'lnum' on;
 
     border: 2px solid #49CEAE;
     box-sizing: border-box;
@@ -193,12 +190,12 @@ a {
     color: #49CEAE;
 }
 
-#completion {
+button.comp-edit {
     position: absolute;
     width: 94px;
     height: 56px;
     left: 333px;
-    top: 886px;
+    top: 850px;
 
     font-family: Roboto;
     font-style: normal;
@@ -215,20 +212,202 @@ a {
     border-radius: 10px;
 }
 
-table.information{
+div.infor-edit{
     position: absolute;
     width: 860px;
-    height: 555px;
+    height: 550px;
     left: 333px;
     top: 282px;
 
     background: #FFFFFF;
+
+}
+
+div.information-box {
+    padding-left: 40px;
+    padding-top: 37px;
+    padding-bottom: 36px;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 34px;
+    line-height: 33px;
+
+    border: 1px solid #ABABAB;
+}
+
+a.member-data {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+}
+
+div.edit-box {
+    padding-left: 20px;
+    padding-top: 38px;
+    padding-bottom: 37px;
 
     font-family: Roboto;
     font-style: normal;
     font-weight: normal;
     font-size: 28px;
     line-height: 33px;
+
+    border: 1px solid #ABABAB;
+}
+
+input.edittext {
+    width: 580px;
+    height: 25px;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+}
+
+div.login {
+    position: absolute;
+
+    padding: 60px;
+    width: 713px;
+    height: 534px;
+    left: 370px;
+    top: 202px;
+
+    background: #FFFFFF;
+    border: 1px solid #A5A5A5;
+    box-sizing: border-box;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 28px;
+    line-height: 33px;
+}
+
+a.login_title {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 48px;
+    line-height: 56px;
+
+    color: #333333;
+}
+
+a.log_text {
+    margin-top: 30px;
+}
+
+input.log_box {
+    margin-top: 30px;
+    margin-bottom: 30px;
+
+    width: 583px;
+    height: 41px;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 28px;
+    line-height: 33px;
+
+    background: #FFFFFF;
+    border: 1px solid #5D5D5D;
+    box-sizing: border-box;
+    border-radius: 3px;
+}
+
+button.login_button {
+    width: 583px;
+    height: 62px;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 36px;
+    line-height: 42px;
+    text-align: center;
+
+    color: #FFFFFF;
+
+    background: #F8AC18;
+    border: 1px solid #5D5D5D;
+    box-sizing: border-box;
+    border-radius: 3px;
+}
+
+a.cart_title {
+    position: absolute;
+    width: 112px;
+    height: 33px;
+    left: 277px;
+    top: 185px;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 28px;
+    line-height: 33px;
+    /* identical to box height */
+
+
+    color: #5E5E5E;
+}
+
+a.count_title {
+    position: absolute;
+    width: 301px;
+    height: 56px;
+    left: 286px;
+    top: 236px;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 36px;
+    line-height: 42px;
+
+    color: #2D2D2D;
+}
+
+a.total {
+    position: absolute;
+    width: 301px;
+    height: 56px;
+    left: 405px;
+    top: 236px;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 48px;
+    line-height: 42px;
+
+    color: #2D2D2D;
+}
+
+button.order_button {
+    position: absolute;
+    width: 341px;
+    height: 88px;
+    left: 286px;
+    top: 302px;
+
+    background: #FFDC61;
+    border: 1px solid #C0C0C0;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 36px;
+    line-height: 42px;
 
     color: #2D2D2D;
 }
