--- a/07_ソースコード/css/reg.css
+++ b/07_ソースコード/css/reg.css
@@ -1,26 +1,26 @@
 
 .register{
     position: absolute;
-    width: 100px;
-    height: 30px;
-    left: 250px;
-    top: 150px;
+    width: 1000px;
+    height: 300px;
+    left: 120px;
+    top: 130px;
 
     font-family: Roboto;
     font-style: normal;
     font-weight: normal;
-    font-size: 20px;
+    font-size: 30px;
     line-height: 33px;
     /* identical to box height */
 
 
-    color: #5E5E5E;
+    color: black;
 
 }
 .register-main{
     position: absolute;
-    width: 860px;
-    height: 488px;
+    width: 900px;
+    height: 600px;
     left: 333px;
     top: 233px;
 
@@ -41,7 +41,7 @@
     color: #2D2D2D;
 
 }
-.reg-email{
+.reg-mail{
     position: absolute;
     top: 100px;
 
@@ -72,23 +72,49 @@
     font-size: 28px;
     line-height: 33px;
 }
-.register-name{
+
+.reg-address{
+    position: absolute;
+    top: 370px;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 28px;
+    line-height: 33px;
+}
+
+.register-address{
     position: absolute;
     width: 816px;
     height: 36px;
     left: 10px;
+    top: 450px;
+
 
 
     background: #FFFFFF;
     border: 1px solid #000000;
     box-sizing: border-box;
 }
-
-.register-email{
+.register-name{
     position: absolute;
     width: 816px;
     height: 36px;
     left: 10px;
+    top: 90px;
+
+    background: #FFFFFF;
+    border: 1px solid #000000;
+    box-sizing: border-box;
+}
+
+.register-mail{
+    position: absolute;
+    width: 816px;
+    height: 36px;
+    left: 10px;
+    top: 180px;
 
 
     background: #FFFFFF;
@@ -104,6 +130,7 @@
     width: 816px;
     height: 36px;
     left: 10px;
+    top: 360px;
 
     background: #FFFFFF;
     border: 1px solid #000000;
@@ -118,11 +145,14 @@
     width: 816px;
     height: 36px;
     left: 10px;
+    top: 270px;
 
     background: #FFFFFF;
     border: 1px solid #000000;
     box-sizing: border-box;
 }
+
+
 
 .register-submit{
     position: absolute;
@@ -131,4 +161,12 @@
     left: 150px;
     top: 500px;
 
+}
+
+.register-info{
+    position: absolute;
+    top: 120px;
+    left: 100px;
+    width: 10000px;
+    font-size: 38px;
 }
