--- a/07_ソースコード/css/cart.css
+++ b/07_ソースコード/css/cart.css
@@ -70,3 +70,101 @@ button.order_button {
 
     color: #2D2D2D;
 }
+
+div.cart_area {
+    position: absolute;
+    width: 912px;
+    height: 100%;
+    left: 286px;
+    top: 410px;
+}
+
+div.cart_items {
+    margin-bottom: 20px;
+    display: block;
+
+    width: 912px;
+    height: 186px;
+
+    background: #FFFFFF;
+    border-radius: 0px 5px;
+}
+
+
+
+img.cart_items_img {
+    float: left;
+    margin-right: 20px;
+
+    width: 186px;
+    height: 186px;
+
+    background: #D0D0D0;
+    border-radius: 5px 5px 0px 0px;
+}
+
+a.cart_items_name {
+    display: block;
+    clear: right;
+    margin-top: 10px;
+    margin-left: 20px;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 36px;
+    line-height: 42px;
+}
+
+a.cart_items_price {
+    display: block;
+    clear: right;
+    margin-top: 10px;
+    margin-left: 20px;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 30px;
+    line-height: 35px;
+
+    color: rgba(252, 2, 2, 0.76);
+}
+
+a.cart_items_count {
+    display: block;
+    clear: right;
+    margin-top: 10px;
+    margin-left: 20px;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 28px;
+
+    color: #000000;
+}
+
+button.cart_items_delete {
+    float: right;
+    margin-right: 30px;
+    margin-bottom: 20px;
+
+    width: 100px;
+    height: 39.37px;
+
+    background: #EBEBEB;
+    border: 1px solid #6E6E6E;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 5px;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 28px;
+
+    color: #000000;
+}
