--- a/07_ソースコード/css/list.css
+++ b/07_ソースコード/css/list.css
@@ -1,4 +1,6 @@
 body {
+    width: 1440px;
+    height: 1024px;
     background-color: #F3F3F3;
     margin: 0;
 }
@@ -7,10 +9,10 @@ a {
     text-decoration: none;
 }
 
-div.head {
-    display: block;
+.head {
+    position: absolute;
     width: 1515px;
-    height: 147px;
+    height: 100px;
     left: 0px;
     top: 0px;
 
@@ -18,11 +20,149 @@ div.head {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+#categorysearch{
+    text-decoration: none;
+    font-family: Roboto;
+    font-style: normal;
+    color: #5E5E5E;
+    font-weight: normal;
+}
+
+#category-text{
+    text-decoration: none;
+    font-family: Roboto;
+    font-style: normal;
+    color: #5E5E5E;
+    font-weight: normal;
+}
+
+#vanner {
+    position: absolute;
+    width: 344px;
+    height: 80px;
+    left: 30px;
+    top: 10px;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 55px;
+    font-feature-settings: 'pnum' on, 'lnum' on;
+
+    text-decoration: none;
+    color: #000000;
+    cursor: pointer;
+}
+
+#infor-regster {
+    position: absolute;
+    width: 110px;
+    height: 30px;
+    left: 900px;
+    top: 60px;
+    background: #49CEAE;
+    border-color: #49CEAE;
+    border-style: solid;
+    border-radius: 5px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 28px;
+    font-feature-settings: 'pnum' on, 'lnum' on;
+    color: #FFFFFF;
+
+    cursor: pointer;
+}
+
+#cart {
+    position: absolute;
+    width: 170px;
+    height: 40px;
+    left: 1280px;
+    top: 10px;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 33px;
+
+    background: #E5E5E5;
+    border: 1px solid #A3D27D;
+    box-sizing: border-box;
+    border-radius: 3px;
+
+    color: #434343;
+    cursor: pointer;
+}
+
+#keyword {
+    position: absolute;
+    width: 300px;
+    height: 30px;
+    left: 1151px;
+    top: 60px;
+
+    background: #E6E6E6;
+    border: 1px solid #C6C6C6;
+    box-sizing: border-box;
+    border-radius: 5px;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 33px;
+    color: #797979;
+}
+
+#keyword-button {
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    left: 1412px;
+    top: 60px;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 33px;
+    color: #797979;
+
+    background: rgba(1,1,1,0);
+    border: none;
+    cursor: pointer;
+}
+
+#log {
+    position: absolute;
+    width: 110px;
+    height: 30px;
+    left: 1025px;
+    top: 60px;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 28px;
+    font-feature-settings: 'pnum' on, 'lnum' on;
+    color: #49CEAE;
+
+    border: 2px solid #49CEAE;
+    box-sizing: border-box;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
 dl.category {
     width: 229px;
+    /*height: 605px;*/
     height: 1134px;
-    left: 13px;
-    top: 162px;
+    left: 0px;
+    top: 0px;
     font-size: 24px;
 
     font-family: Roboto;
@@ -34,188 +174,57 @@ dl.category {
     border-right-style: solid;
     border-width: 1px;
     border-right-color: #ABABAB;
+    /*display: inline-block;*/
 
     padding-left: 10px;
+
+    user-select: none;
 
 }
 dt a{
     color: #5E5E5E;
 }
 
+#all{
+    padding-top: 120px;
+    margin-left: 10px;
+}
+
+#all a:hover{
+    font-size: 30px;
+    color: red;
+}
+
+#cp{
+    margin-left: 20px;
+}
+
+#cp a:hover{
+    font-size: 30px;
+    color: red;
+}
+
 div.pagename {
     position: absolute;
     width: 100px;
     height: 25px;
-    top: 172px;
+    top: 125px;
     left: 263px;
 
     font-size: 24px;
     color: #5E5E5E;
 }
 
-div.sort {
-    position: absolute;
-    width: 500px;
-    height: 25px;
-    top: 172px;
-    left: 413px;
-
-    font-size: 24px;
-    color: #3D3D3D;
-}
-.sort a{
-    color: #3D3D3D;
-}
-#user-name {
-    position: absolute;
-    width: 144px;
-    height: 28px;
-    left: 915px;
-    top: 48px;
-
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 24px;
-    line-height: 28px;
-    font-feature-settings: 'pnum' on, 'lnum' on;
-
-    color: #000000;
-
+.sort {
+    margin-left: 30px;
 }
 
-
-#title {
-    position: absolute;
-    width: 112px;
-    height: 33px;
-    left: 277px;
-    top: 185px;
-
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 28px;
-    line-height: 33px;
-
-    color: #5E5E5E;
+.sort a:hover{
+    font-size: 30px;
+    color: red;
 }
-
-#vanner {
-    position: absolute;
-    width: 344px;
-    height: 80px;
-    left: 36px;
-    top: 35px;
-
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 55px;
-    line-height: 64px;
-    font-feature-settings: 'pnum' on, 'lnum' on;
-
-    color: #000000;
-}
-
-#infor-regster {
-    position: absolute;
-    width: 126.76px;
-    height: 39px;
-    left: 830px;
-    top: 93px;
-
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 24px;
-    line-height: 28px;
-
-    color: #FFFFFF;
-    border: 1px solid #F9F9F9;
-
-    background: #49CEAE;
-    border-radius: 5px;
-}
-
-#cart {
-    position: absolute;
-    width: 248px;
-    height: 51px;
-    left: 1240px;
-    top: 25px;
-
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 24px;
-    line-height: 33px;
-
-    background: #E5E5E5;
-    border: 1px solid #A3D27D;
-    box-sizing: border-box;
-    border-radius: 3px;
-
-    color: #434343;
-}
-
-#keyword {
-    position: absolute;
-    width: 330px;
-    height: 40px;
-    left: 1100px;
-    top: 92px;
-
-    background: #E6E6E6;
-    border: 1px solid #C6C6C6;
-    box-sizing: border-box;
-    border-radius: 5px;
-
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 28px;
-    line-height: 33px;
-
-    color: #797979;
-}
-
-#keyword-button {
-    position: absolute;
-    height: 40px;
-    left: 1430px;
-    top: 92px;
-
-    background: #E6E6E6;
-    border: 1px solid #C6C6C6;
-
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 28px;
-    line-height: 33px;
-
-    color: #797979;
-}
-
-#log {
-    position: absolute;
-    width: 130px;
-    height: 39px;
-    left: 960px;
-    top: 93px;
-
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 28px;
-
-    border: 2px solid #49CEAE;
-    box-sizing: border-box;
-    border-radius: 5px;
-
-    color: #49CEAE;
+#sortname{
+    margin-left: 20px;
 }
 
 button.comp-edit {
@@ -442,7 +451,7 @@ button.order_button {
 
 .displayitem {
     position: absolute;
-    top: 200px;
+    top: 173px;
     left: 250px;
     list-style: none;
     overflow: hidden;
@@ -461,14 +470,16 @@ button.order_button {
     height: 250px;
 }
 
-dt#categorysearch {
-    padding-top: 25px;
-}
-
 div.itemname{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
     color: #333333;
 }
 
 div.price{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
     color: #FC0202;
 }
