--- a/07_ソースコード/css/list.css
+++ b/07_ソースコード/css/list.css
@@ -488,6 +488,7 @@ div.itemname{
     font-style: normal;
     font-weight: bold;
     color: #333333;
+    padding-left: 5px;
 }
 
 div.price{
@@ -495,5 +496,7 @@ div.price{
     font-style: normal;
     font-weight: bold;
     color: #FC0202;
-    padding-top: 24px;
+    padding-top: 20px;
+    padding-bottom: 5px;
+    padding-left: 5px;
 }
