--- a/07_ソースコード/css/top.css
+++ b/07_ソースコード/css/top.css
@@ -537,6 +537,7 @@ ul.campaignitem {
     width: 580px;
     list-style: none;
     overflow: hidden;
+    margin-left: 11px;
 }
 
 .campaignitem li {
@@ -548,6 +549,7 @@ ul.campaignitem {
     margin-left: 13px;
 }
 
+
 .campaignitem img{
     width: 250px;
     height: 250px;
@@ -557,6 +559,7 @@ div.itemname{
     font-style: normal;
     font-weight: bold;
     color: #333333;
+    padding-left: 5px;
 }
 
 div.price{
@@ -564,5 +567,7 @@ div.price{
     font-style: normal;
     font-weight: bold;
     color: #FC0202;
-    padding-top: 24px;
+    padding-top: 20px;
+    padding-bottom: 5px;
+    padding-left: 5px;
 }
