--- a/07_ソースコード/css/edit.css
+++ b/07_ソースコード/css/edit.css
@@ -1,4 +1,26 @@
 /*会員情報・編集ページ*/
+body {
+    width: 1440px;
+    height: 1024px;
+    background-color: #F3F3F3;
+    margin: 0;
+}
+
+a {
+    text-decoration: none;
+}
+
+div.head {
+    position: absolute;
+    width: 1515px;
+    height: 100px;
+    left: 0px;
+    top: 0px;
+
+    background: #F9F9F9;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
 p.cant_edit {
     font-family: Roboto;
     font-style: normal;
