--- a/07_ソースコード/css/edit.css
+++ b/07_ソースコード/css/edit.css
@@ -21,7 +21,7 @@ div.head {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-p.cant_edit {
+a.cant_edit {
     font-family: Roboto;
     font-style: normal;
     font-weight: normal;
