--- a/07_ソースコード/css/edit.css
+++ b/07_ソースコード/css/edit.css
@@ -20,12 +20,17 @@ div.head {
     background: #F9F9F9;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
-
 a.cant_edit {
+    position: absolute;
+    left: 340px;
+    top: 180px;
+
     font-family: Roboto;
     font-style: normal;
     font-weight: normal;
-    font-size: 18px;
+    font-size: 24px;
+
+    color: #5E5E5E;
 }
 
 a.information_title {
