--- a/07_ソースコード/css/edit.css
+++ b/07_ソースコード/css/edit.css
@@ -20,6 +20,27 @@ div.head {
     background: #F9F9F9;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+
+#vanner {
+    position: absolute;
+    width: 344px;
+    height: 80px;
+    left: 30px;
+    top: 10px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 55px;
+    font-feature-settings: 'pnum' on, 'lnum' on;
+    text-decoration: none;
+    color: #000000;
+    cursor: pointer;
+}
+
+#vanner:hover{
+    font-size: 57px;
+}
+
 a.cant_edit {
     position: absolute;
     left: 340px;
