--- a/07_ソースコード/css/login.css
+++ b/07_ソースコード/css/login.css
@@ -1,4 +1,46 @@
 /*ログインページ*/
+body {
+    width: 1440px;
+    height: 1024px;
+    background-color: #F3F3F3;
+    margin: 0;
+}
+
+a {
+    text-decoration: none;
+}
+
+div.head {
+    position: absolute;
+    width: 1515px;
+    height: 100px;
+    left: 0px;
+    top: 0px;
+
+    background: #F9F9F9;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+#vanner {
+    position: absolute;
+    width: 344px;
+    height: 80px;
+    left: 30px;
+    top: 10px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 55px;
+    font-feature-settings: 'pnum' on, 'lnum' on;
+    text-decoration: none;
+    color: #000000;
+    cursor: pointer;
+}
+
+#vanner:hover{
+    font-size: 57px;
+}
+
 div.login {
     position: absolute;
 
